# agent-comfy-draw

./: .env.example  .gitignore  AGENT_QUERY_GUIDE.md  AGENT_TWO_LEVEL_QUERY.md  AGENT_WORKFLOW_GUIDE.md  DANBOORU_QUERY_TEST.md  DATA_MANAGEMENT.md  DOCUMENTATION_GOVERNANCE_COMPLETE.md  LICENSE  MODULE_AUDIT_REPORT.md  README.md  REFERENCES_AUDIT.md  REFERENCES_CLEANUP_COMPLETE.md  REFERENCE_TEMPLATE.md  SKILL.md  SKILL_AUDIT_REPORT.md  SKILL_REFACTOR_COMPLETE.md  SKILL_REFACTOR_FINAL.md  SKILL_REFACTOR_PROGRESS.md  SKILL_TEMPLATE.md  WARNINGS.md  WEEK1_REPORT.md  _env.py  backup.sh  requirements.txt  setup.bat  setup.sh
modules/Tanger-Presets-Show/: .pretags_default  LICENSE  (+14 more)
modules/prompt_inspiration/: .gitignore  SKILL.md  pyproject.toml
modules/prompt_inspiration/prompt_inspiration/: __init__.py  cli.py  config.py  indexer.py  metadata.py  model_setup.py  searcher.py  tool.py
modules/prompt_inspiration/prompt_inspiration/tagger/: __init__.py  vlm.py  wd.py
modules/prompt_inspiration/tests/: conftest.py  test_indexer.py  test_metadata.py  test_searcher.py
pretags/: .gitkeep  README.md
references/: agent-guide.md  anima-prompt-and-workflow.md  artstyle-curation.md  character-preview-generation.md  comfyui-pitfalls.md  danbooru-query-test.md  docker-sandbox-guide.md  environment-setup.md  face-detailer-pipeline.md  model-prompt-comparison.md  pretags-data-management.md  pretags-draw-rules.md  pretags-excel-workflow.md  release-checklist.md  safetensors-tag-recovery.md  warnings.md  workflow-node-mapping.md  z-image-guide.md
scripts/: clean_lora_from_anima.py
(+47 files in other folders)
