[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-inspiration"
version = "0.1.0"
description = "Lightweight prompt inspiration search engine for agent use"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "onnxruntime>=1.16",
    "tokenizers>=0.15",
    "transformers>=4.36",
]

[project.optional-dependencies]
setup = [
    "sentence-transformers>=2.2",
    "optimum>=1.13",
]

[project.scripts]
prompt-inspiration = "prompt_inspiration.cli:main"
